# intsoc-transactor

./: .clinerules  .cursorrules  .envrc  .gitignore  .guix-channel  .mailmap  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  EXPLAINME.adoc  GOVERNANCE.md  Justfile  MAINTAINERS.md  PLACEHOLDERS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  cliff.toml  eclexiaiser.toml  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: codeql.yml  hypatia-scan.yml  mirror.yml
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  INTENT.contractile  META.a2ml  MUST.contractile  NEUROSYM.a2ml  STATE.a2ml  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/k9/examples/: project-metadata.k9.ncl
.machine_readable/contractiles/trust/: Trustfile.a2ml
.machine_readable/self-validating/examples/: project-metadata.k9.ncl
.machine_readable/svc/k9/: README.adoc
.machine_readable/svc/k9/examples/: project-metadata.k9.ncl
.machine_readable/svc/self-validating/: README.adoc
.reuse/: dep5
.well-known/: security.txt
contractiles/dust/: Dustfile.a2ml
contractiles/lust/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
crates/intsoc-api/: Cargo.toml
crates/intsoc-api/src/: datatracker.rs  iana.rs  lib.rs
crates/intsoc-cli/: Cargo.toml
crates/intsoc-cli/src/: main.rs
crates/intsoc-cli/src/commands/: check.rs  fix.rs  init.rs  mod.rs  status.rs  submit.rs
crates/intsoc-core/: Cargo.toml
crates/intsoc-core/benches/: intsoc_core_bench.rs
crates/intsoc-core/src/: document.rs  fix.rs  lib.rs  organization.rs  state.rs  stream.rs  submission.rs  transaction.rs  validation.rs
crates/intsoc-fixer/: Cargo.toml
crates/intsoc-fixer/src/: diff.rs  engine.rs  generators.rs  lib.rs
crates/intsoc-fixer/src/generators/: boilerplate.rs  date.rs  draft_name.rs  header.rs  references.rs  sections.rs
crates/intsoc-git/: Cargo.toml
crates/intsoc-git/src/: lib.rs
crates/intsoc-nickel/: Cargo.toml
crates/intsoc-nickel/src/: lib.rs  policy.rs  render.rs
crates/intsoc-parser/: Cargo.toml
crates/intsoc-parser/src/: idnits.rs  lib.rs  plain_text.rs  xml.rs
docs/: AI-CONVENTIONS.md  AI-INSTALL-README-SECTION.adoc  AI_INSTALLATION_GUIDE.adoc  CITATIONS.adoc  PIPELINE.md  QUICKSTART.md  THREAT-MODEL.md  tech-debt-2026-05-26.md
docs/decisions/: 0000-template.md  0001-adopt-rsr-standard.md  README.md
ffi/zig/: build.zig
ffi/zig/src/: main.zig
ffi/zig/test/: integration_test.zig
gui/: Cargo.toml  deno.json  gossamer.conf.json  index.html  rescript.json
gui/backend/: main.rs
gui/src/: App.res  RuntimeBridge.res
gui/src-tauri/: Cargo.toml  build.rs  gossamer.conf.json  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/bindings/: Tauri.res
gui/src/tea/: Tea_App.res  Tea_Cmd.res  Tea_Html.res  Tea_Render.res  Tea_Sub.res  Tea_Vdom.res
haskell/: intsoc-parser-hs.cabal
haskell/cbits/: haskell_init.c
haskell/src/Parser/: BNFAugmented.hs  Internal.hs  RFCXml.hs  References.hs
nickel/contracts/: boilerplate.ncl  draft.ncl  submission.ncl
nickel/policies/: ipr-check.ncl  stream-rules.ncl
nickel/templates/ietf/: individual-draft.ncl
seams/records/: intsoc-branch-newspaper.seam.json
src/abi/: Foreign.idr  Layout.idr  Types.idr
