-- SPDX-License-Identifier: PMPL-1.0-or-later
-- Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>

cabal-version: 3.0
name:          intsoc-parser-hs
version:       0.1.0.0
synopsis:      Haskell parser helpers for Internet Society documents (Phase 2)
description:
  Megaparsec-based parsers for RFC XML, ABNF grammars, and BNF-augmented
  references. Compiled as a C-callable shared library for FFI integration
  with the Rust core.
license:       MPL-2.0
-- PMPL-1.0-or-later preferred; MPL-2.0 required for Hackage/Cabal ecosystem
license-file:  ../LICENSE
author:        Jonathan D.A. Jewell
maintainer:    j.d.a.jewell@open.ac.uk
copyright:     (c) 2026 Jonathan D.A. Jewell (hyperpolymath)
category:      Text
build-type:    Simple

library
  exposed-modules:
    Parser.RFCXml
    Parser.BNFAugmented
    Parser.References
  other-modules:
    Parser.Internal
  hs-source-dirs: src
  build-depends:
    base             >= 4.18 && < 5,
    megaparsec       >= 9.6  && < 10,
    text             >= 2.0  && < 3,
    aeson            >= 2.2  && < 3,
    bytestring       >= 0.11 && < 1,
    containers       >= 0.6  && < 1,
    xml-conduit      >= 1.9  && < 2
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    LambdaCase
    DerivingStrategies
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  c-sources: cbits/haskell_init.c
