# SPDX-License-Identifier: MPL-2.0

[package]
name = "intsoc-cli"
description = "CLI tool for Internet Society document checking, fixing, and submission"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "intsoc"
path = "src/main.rs"

[dependencies]
intsoc-core = { workspace = true }
intsoc-parser = { workspace = true }
intsoc-fixer = { workspace = true }
intsoc-nickel = { workspace = true }
intsoc-git = { workspace = true }
intsoc-api = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
