# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "intsoc-core"
description = "Domain model, state machines, and validation framework for Internet Society document processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "intsoc_core_bench"
harness = false

[lints]
workspace = true
