# SPDX-License-Identifier: MPL-2.0

[package]
name = "intsoc-git"
description = "Git integration via gix for Internet Society document versioning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
intsoc-core = { workspace = true }
gix = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
