# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "intsoc-nickel"
description = "Nickel template rendering and policy validation for Internet Society submissions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
intsoc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
