# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "intsoc-parser"
description = "RFC XML v3, plain-text, and idnits output parsing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
intsoc-core = { workspace = true }
quick-xml = { workspace = true }
winnow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
