# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "intsoc-gui"
description = "Tauri 2.0 desktop GUI for Internet Society document processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2.0 framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization (needed for Tauri command params/return types)
serde = { workspace = true }
serde_json = { workspace = true }

# Workspace crates (paths relative to gui/src-tauri/)
intsoc-core = { path = "../../crates/intsoc-core" }
intsoc-parser = { path = "../../crates/intsoc-parser" }
intsoc-fixer = { path = "../../crates/intsoc-fixer" }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
